--- a/src/dashboard.css
+++ b/src/dashboard.css
@@ -537,4 +537,9 @@ button {
   .deletItemtable {
     margin-left: -50px;
   }
+  .cadastro-container {
+    width: 900px;
+    height: 100vh;
+    display: flex;
+  }
   }
