--- a/src/dashboard.css
+++ b/src/dashboard.css
@@ -456,8 +456,6 @@ button {
   }
   }
 
-
-
 @media screen and (max-width: 580px) {
     .montantes {
     font-size: 20px;
@@ -528,4 +526,63 @@ g
     height: 100vh;
     display: flex;
   }
+
+  .menu-container {
+    font-size: 20px;
+    height: 20px;
+    margin-bottom: -100px;
+    float: inline-end;
+    margin-top: 65px;
+    color: white;
+    margin-right: 10px;
+    width: 60px;
   }
+  }
+
+  @media screen and (max-width: 375px) {
+    .bloco-title {
+        font-size: 12px;
+        margin-left: -20px;
+      }
+      .icons {
+        height: 20px;
+        margin-top: -40px;
+      }
+      .montantes {
+        font-size: 18px;
+    }
+    table {
+        width: 350px;
+
+    }
+    .deletItemtable {
+        margin-left: -5px;
+        margin-right: 27px;
+      }
+      .menu-container { 
+        display: none;
+      }
+      .descricao {
+        width: 25%;
+        margin-left: 7px;
+        padding: 5px 5px;
+      }
+      input[type="number"] {
+        width: 20%;
+        font-size: 15px;
+        margin-left: -5px;
+      }
+      select {
+        width: 29%;
+        font-size: 15px;
+      }
+      .button-adcionar {
+        width: 90%;
+        font-size: 15px;
+        margin-bottom: 120px;
+      }
+      .form-container {
+        margin-top: 30px;
+        margin-bottom: 65px;
+      }
+    }
